# lsp-ml-engineer-diabetes-prediction-model

./: .gitignore  Dockerfile  app.py  deployment_guide.md  diabetes_prediction_model.html  diabetes_prediction_model.ipynb  diabetes_predictor.py  pyproject.toml  questions.md  requirements.txt  sample_patients.csv  task.txt
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  index.html
